新增 普通網頁部分 連結首頁

--- a/start.html
+++ b/start.html
@@ -1,11 +1,9 @@
 ﻿<head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <script type="text/javascript" src="start/js/load.js"></script>
+    <link rel="stylesheet" href="css/style.css">
     <link rel="Shortcut Icon" type="image/x-icon" href="start/image/tanko.ico" />
-    <style type="text/css">
-        * {
-            padding: 0;
-            margin: 0;
-        }
-    </style>
 </head>
+<a class="webLink" target="_blank" href="https://nawanae.github.io/PokemonWebV2/"><img class="icon" src="https://nawanae.github.io/PokemonWebV2/image/pokemonBall.png"></a>
+<button class="visibleBtn" data-visible="true"><</button> 
+<script src="js/normal.js"></script>
