新增 網頁刪檔控制

--- a/start.html
+++ b/start.html
@@ -8,13 +8,14 @@
 
 </head>
 <div class="webLinksContainer">
-        <a class="webLinks index" target="_blank" alt="官網" href="https://nawanae.github.io/PokemonWebV2/">
+        <a class="webLinks index" target="_blank" title="官網" alt="官網" href="https://nawanae.github.io/PokemonWebV2/">
             <img class="icon" src="https://nawanae.github.io/PokemonWebV2/image/pokemonBall.png">
         </a>
-            <img class="webLinks playHelp icon" alt="按鍵說明" src="https://nawanae.github.io/PokemonWebV2/image/gamepad.png">
-            <a class="webLinks raiders" target="_blank" href="https://nawanae.github.io/PokemonWebV2/pages/raiders/raiders.html">
-                <img class="icon" alt="攻略" src="https://nawanae.github.io/PokemonWebV2/image/raiders.png">
-            </a>
+        <img class="webLinks playHelp icon"  title="按鍵說明" alt="按鍵說明" src="https://nawanae.github.io/PokemonWebV2/image/gamepad.png">
+        <a class="webLinks raiders" target="_blank" href="https://nawanae.github.io/PokemonWebV2/pages/raiders/raiders.html">
+            <img class="icon" alt="攻略" src="https://nawanae.github.io/PokemonWebV2/image/raiders.png">
+        </a>
+        <img src="images/delete.png" alt="刪除所有存檔" title="刪除所有存檔" class="removeRecords">
     <button class="visibleBtn wButton" data-visible="true">
         <</button>
 </div>
