新增 載入畫面

--- a/start.html
+++ b/start.html
@@ -13,9 +13,10 @@
         </a>
         <img class="webLinks playHelp icon"  title="按鍵說明" alt="按鍵說明" src="https://nawanae.github.io/PokemonWebV2/image/gamepad.png">
         <a class="webLinks raiders" target="_blank" href="https://nawanae.github.io/PokemonWebV2/pages/raiders/raiders.html">
-            <img class="icon" alt="攻略" src="https://nawanae.github.io/PokemonWebV2/image/raiders.png">
+            <img class="icon" alt="攻略" title="攻略" src="https://nawanae.github.io/PokemonWebV2/image/raiders.png">
         </a>
-        <img src="images/delete.png" alt="刪除所有存檔" title="刪除所有存檔" class="removeRecords">
+        <img src="images/grid.png" alt="顯示格線" title="顯示格線" class="webLinks showGrid">
+        <img src="images/delete.png" alt="刪除所有存檔" title="刪除所有存檔" class="webLinks  removeRecords">
     <button class="visibleBtn wButton" data-visible="true">
         <</button>
 </div>
@@ -31,4 +32,11 @@
     </div>
 </div>
 </div>
+<div class="spinnerContianer">
+    <div class="spinner">
+            <div class="spinnerText">Loading <span id="loadItemText">NTUT Framework</span> Now...</div>
+            <div class="cssload-loader"></div>
+    </div>
+</div>
+
 <script src="js/normal.js"></script>
