--- a/start.html
+++ b/start.html
@@ -15,12 +15,15 @@
         <a class="webLinks raiders" target="_blank" href="https://nawanae.github.io/PokemonWebV2/pages/raiders/raiders.html">
             <img class="icon" alt="攻略" title="攻略" src="https://nawanae.github.io/PokemonWebV2/image/raiders.png">
         </a>
+
+         <button class="visibleBtn wButton" data-visible="true"><</button>
+</div>
+<div id="webLinksContainer2"class="webLinksContainer">
         <img src="images/grid.png" alt="顯示格線" title="顯示格線" class="webLinks showGrid">
         <img src="images/delete.png" alt="刪除所有存檔" title="刪除所有存檔" class="webLinks  removeRecords">
-    <button class="visibleBtn wButton" data-visible="true">
-        <</button>
+        <img src="images/zombie.png" alt="BFS walk殭屍測試" title="BFS walk殭屍測試" class="webLinks  zombieMode">
+<button class="visibleBtn wButton" data-visible="true"><</button>
 </div>
-
 <div id="playHelp" class="coverBackground hide">
     <div class="coverContent article" data-page="0">
         <button class="coverClose wButton">X</button>
