新增 一鑑定義debugDefine

--- a/start.html
+++ b/start.html
@@ -22,6 +22,7 @@
         <img src="images/grid.png" alt="顯示格線" title="顯示格線" class="webLinks showGrid">
         <img src="images/delete.png" alt="刪除所有存檔" title="刪除所有存檔" class="webLinks  removeRecords">
         <img src="images/zombie.png" alt="BFS walk殭屍測試" title="BFS walk殭屍測試" class="webLinks  zombieMode">
+        <img src="images/debugDefine.png" alt="debugDefine" title="定義Debug用縮寫" class="webLinks  debugDefine">
 <button class="visibleBtn wButton" data-visible="true"><</button>
 </div>
 <div id="playHelp" class="coverBackground hide">
