修復 按鍵介紹

--- a/start.html
+++ b/start.html
@@ -25,7 +25,7 @@
         <img src="images/debugDefine.png" alt="debugDefine" title="定義Debug用縮寫" class="webLinks  debugDefine">
 <button class="visibleBtn wButton" data-visible="true"><</button>
 </div>
-<div id="playHelp" class="coverBackground hide">
+<div id="playHelp" class="coverBackground">
     <div class="coverContent article" data-page="0">
         <button class="coverClose wButton">X</button>
         <div class="lastPageButton disable"></div>
