強制設定 AJAX GITHUB檔案

--- a/pages/playHelp/0.html
+++ b/pages/playHelp/0.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-
+<meta http-equiv="Access-Control-Allow-Origin" content="*">
 <meta charset="UTF-8">
 <div class="light mask left">
-    <div class="pageContent p0" data-nextPageSrc="pages/playHelp/1.html">
+    <div class="pageContent p0" data-nextPageSrc="https://nawanae.github.io/PokemonYellow/pages/playHelp/1.html">
         <div class="up key">
             <h1 class="title ">上</h1>
             <p class="content">↑、W</p>
