--- a/pages/playHelp/1.html
+++ b/pages/playHelp/1.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-
+<meta http-equiv="Access-Control-Allow-Origin" content="*">
 <meta charset="UTF-8">
 <div class="light mask left">
-    <div class="pageContent p1" data-lastPageSrc="pages/playHelp/0.html" data-nextPageSrc="pages/playHelp/2.html">
+    <div class="pageContent p1" data-lastPageSrc="https://nawanae.github.io/PokemonYellow/pages/playHelp/0.html" data-nextPageSrc="https://nawanae.github.io/PokemonYellow/pages/playHelp/2.html">
         <div class="A key">
             <h1 class="title">選擇</h1>
             <p class="content">K、Enter</p>
