--- a/pages/playHelp/2.html
+++ b/pages/playHelp/2.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-
+<meta http-equiv="Access-Control-Allow-Origin" content="*">
 <meta charset="UTF-8">
 <div class="light mask left">
-    <div class="pageContent p2" data-lastPageSrc="pages/playHelp/1.html">
+    <div class="pageContent p2" data-lastPageSrc="https://nawanae.github.io/PokemonYellow/pages/playHelp/1.html">
         <div class="select key">
             <h1 class="title">功能</h1>
             <p class="content">V</p>
