新增 jquery至伺服端

--- a/start.html
+++ b/start.html
@@ -1,6 +1,5 @@
 ﻿<head>
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-        crossorigin="anonymous"></script>
+    <script src="js/jquery-3.3.1.min.js" ></script>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <script type="text/javascript" src="start/js/load.js"></script>
     <link rel="stylesheet" href="css/style.css">
