--- a/pages/developer/0.html
+++ b/pages/developer/0.html
@@ -1,14 +1,23 @@
 <!DOCTYPE html>
 <meta http-equiv="Access-Control-Allow-Origin" content="*">
 <meta charset="UTF-8">
-<h2>開發人員</h2>
-<div class="light mask left">
-    <h3>資工二</h3>
-    <h1>105590029</h1>
-    <h2>洪堯煬</h2>
-</div>
-<div class="light mask right">
-    <h3>資工二</h3>
-    <h1>105590044</h1>
-    <h2>蔣勝弼</h2>
+<div class="dark">
+
+            <h1>開發人員</h1>
+            <hr color="gray" width="95%">
+            <h4>官網、網頁介面、遊戲UI、檔案、地圖、買賣、劇情、事件</h4>
+            <h3>資工二</h3>
+            <h1>105590029</h1>
+            <h2>洪堯煬</h2>
+            <hr color="gray" width="95%">
+            <h4>戰鬥、寶可夢數值計算、class規劃、戰鬥UI</h4>
+            <h3>資工二</h3>
+            <h1>105590044</h1>
+            <h2>蔣勝弼</h2>
+            <hr color="gray" width="95%">
+            <h4>攻略頁</h4>
+            <h3>資工二</h3>
+            <h1>105590016</h1>
+            <h2>周傳益</h2>
+
 </div>
