修改 分隔線顏色

--- a/pages/developer/0.html
+++ b/pages/developer/0.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <meta http-equiv="Access-Control-Allow-Origin" content="*">
 <meta charset="UTF-8">
-<div class="dark">
+<div class="light">
 
             <h1>開發人員</h1>
-            <hr color="gray" width="95%">
+            <hr color="gray" width="100%">
             <h4>官網、網頁介面、遊戲UI、檔案、地圖、買賣、劇情、事件</h4>
             <h3>資工二</h3>
             <h1>105590029</h1>
             <h2>洪堯煬</h2>
-            <hr color="gray" width="95%">
+            <hr color="gray" width="100%">
             <h4>戰鬥、寶可夢數值計算、class規劃、戰鬥UI</h4>
             <h3>資工二</h3>
             <h1>105590044</h1>
             <h2>蔣勝弼</h2>
-            <hr color="gray" width="95%">
+            <hr color="gray" width="100%">
             <h4>攻略頁</h4>
             <h3>資工二</h3>
             <h1>105590016</h1>
