--- a/start.html
+++ b/start.html
@@ -18,11 +18,13 @@
          <button class="visibleBtn wButton" data-visible="true"><</button>
 </div>
 <div id="webLinksContainer2"class="webLinksContainer">
-        <img src="images/grid.png" alt="顯示格線" title="顯示格線" class="webLinks showGrid">
         <img src="images/delete.png" alt="刪除所有存檔" title="刪除所有存檔" class="webLinks  removeRecords">
-        <img src="images/zombie.png" alt="BFS walk殭屍測試" title="BFS walk殭屍測試" class="webLinks  zombieMode">
+        <!-- <img src="images/zombie.png" alt="BFS walk殭屍測試" title="BFS walk殭屍測試" class="webLinks  zombieMode"> -->
         <img src="images/debugDefine.png" alt="debugDefine" title="定義Debug用縮寫" class="webLinks  debugDefine">
-<button class="visibleBtn wButton" data-visible="true"><</button>
+        <img src="images/avoid.png" alt="避開遇怪" title="避開遇怪" class="webLinks  avoidMonster">
+        <img src="images/levelup.png" alt="升等" title="升等" class="webLinks  levelup">
+        <img src="images/money.png" alt="加錢" title="加錢" class="webLinks  moneyup">
+<button class="visibleBtn wButton" data-visible="false"><</button>
 </div>
 <div id="playHelp" class="coverBackground">
     <div class="coverContent article" data-page="0">
