預先 隱藏選單

--- a/start.html
+++ b/start.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="Shortcut Icon" type="image/x-icon" href="start/image/tanko.ico" />
     <script src="js/visualNovel.js"></script>
+    <style>.hide{display: none;}</style>
 </head>
 <div class="webLinksContainer">
         <a class="webLinks index" target="_blank" title="官網" alt="官網" href="https://nawanae.github.io/PokemonWebV2/">
