--- a/start.html
+++ b/start.html
@@ -53,7 +53,7 @@
             <ul >
                     <li class="option" onclick="NawaNawa.mapMove('palletTown',4,4);">口袋鎮</li>
                     <li class="option" onclick="NawaNawa.mapMove('viridianCity',20,31);" >常磐市</li>
-                    <li class="option" onclick="NawaNawa.mapMove('pewterCity',18,34);">深灰市</li>
+                    <li class="option" onclick="NawaNawa.mapMove('pewterCity',18,34);">比尼市/深灰市</li>
                     <li class="option" onclick="NawaNawa.mapMove('pewterCityGym',4,13);">深灰道館</li>
                     <li class="option" onclick="NawaNawa.mapMove('route01',10,39);">道路1</li>
                     <li class="option" onclick="NawaNawa.mapMove('route02',10,30);">道路2-1</li>
