更新操作說明

--- a/pages/playHelp/1.html
+++ b/pages/playHelp/1.html
@@ -10,7 +10,7 @@
         <br>
         <div class="B key">
             <h1 class="title">取消</h1>
-            <p class="content">J</p>
+            <p class="content">J、Shift、'、Esc、Backspace</p>
         </div>
     </div>
 </div>
