修正 使用說明

--- a/pages/playHelp/2.html
+++ b/pages/playHelp/2.html
@@ -3,9 +3,9 @@
 <meta charset="UTF-8">
 <div class="light mask left">
     <div class="pageContent p2" data-lastPageSrc="https://nawanae.github.io/PokemonYellow/pages/playHelp/1.html">
-        <div class="select key">
-            <h1 class="title">功能</h1>
-            <p class="content">V</p>
+        <div class="start key">
+            <h1 class="title">選單</h1>
+            <p class="content">B、Space</p>
         </div>
     </div>
 </div>
